fixing upcoming event box spacing

--- a/app/css/less/homepage.less
+++ b/app/css/less/homepage.less
@@ -410,6 +410,7 @@ main {
 			width: 100%;
 			height: 300px;
 			background-color: #e6e6e6;
+			margin-bottom: 30px;
 
 			.eventPhoto {
 				height: 300px;
@@ -460,7 +461,7 @@ main {
 		.moreInfoRow {
 			text-align: center;
 			margin-bottom: 30px;
-			margin-top: 30px;
+			// margin-top: 30px;
 		}
 
 		.eventsRow {
